# bms-firmware

./: .buildinfo  .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  README.md  check.sh  genindex.html  index.html  linker_flags_newlib-nano.py  mbed_app.json  objects.inv  platformio-extra.py  platformio.ini  prj.conf  search.html  searchindex.js  stlink_extra_script.py  todo  west.yml
.github/workflows/: docs.yml  doxygen.yml  platformio.yml  zephyr.yml
_sources/: index.rst.txt
_sources/src/: features.rst.txt  supported_hardware.rst.txt
_sources/src/api/: bms.rst.txt  data_objects.rst.txt  misc.rst.txt
_sources/src/dev/: building_flashing.rst.txt  customization.rst.txt  simulator.rst.txt  (+2 more)
app/: .gitignore  CMakeLists.txt  Kconfig  oled.conf  prj.conf  sysbuild.conf  west.yml
app/boards/: bms_16s100_sc.conf  bms_16s100_sc_esp32c3.conf  bms_5s50_sc.conf  bms_8s50_ic.conf  bms_8s50_ic_f072.conf  bms_c1.conf  native_sim.conf  native_sim.overlay
app/src/: CMakeLists.txt  bms.h  bms_common.c  bms_soc.c  board.h  button.c  button.h  can.c  data_objects.c  data_objects.cpp  data_objects.h  eeprom.cpp  eeprom.h  helper.cpp  helper.h  leds.c  leds.cpp  main.c  main.cpp  oled.c  oled.cpp  oled_font.h
app/src/bq769x0/: bms_bq769x0.c  interface.c  interface.h  registers.h
app/src/bq769x2/: CMakeLists.txt  bms_bq769x2.c  interface.c  interface.h  registers.h
app/src/ext/: CMakeLists.txt  README.md  can.cpp  okai_PB2_power.c  okai_PB2_power.h  oled.cpp  serial.cpp
app/src/isl94202/: CMakeLists.txt  bms_isl94202.c  interface.c  interface.h  registers.h
app/sysbuild/: app.conf
app/sysbuild/mcuboot/: prj.conf
app/sysbuild/mcuboot/boards/: bms_c1.conf  bms_c1.overlay
boards/: Kconfig  README.md  bms8s50ic_f072.json  bms8s50ic_l452cx.json  bms_15s80_sc.json  bms_5s50_sc.json  bms_8s50_ic@0.2.json  bms_8s50_ic_f072.json
docs/: Doxyfile  Makefile  conf.py  index.rst  requirements.txt
docs/src/: features.rst  supported_hardware.rst
drivers/: .clang-format  CMakeLists.txt  Kconfig
drivers/bms_ic/: CMakeLists.txt  Kconfig
drivers/ext_espressif/: .clang-format  usb_serial_jtag_ll.h  usb_serial_jtag_struct.h
drivers/serial/: CMakeLists.txt  Kconfig.esp32  serial_esp32_usb.c
dts/bindings/: bms.yaml  renesas,isl94202.yaml  switch.yaml  ti,bq769x0.yaml  ti,bq769x2-i2c.yaml
include/: helper.h
include/bms/: bms.h  bms_common.h
include/drivers/: bms_ic.h
lib/: CMakeLists.txt  helper.c
lib/DogLCD/: DogLCD.cpp  DogLCD.h  font_16x32nums.h  font_6x8.h  font_8x16.h  font_8x8.h
lib/NOKIA_5110/: NOKIA_5110.cpp  NOKIA_5110.h
lib/adafruit_gfx/: Adafruit_GFX.cpp  Adafruit_GFX.h  Adafruit_GFX_Config.h  Adafruit_SSD1306.cpp  Adafruit_SSD1306.h  glcdfont.h
scripts/: check-style.sh
src/: CMakeLists.txt  bms.h  bms_bq769x0.c  bms_bq769x0.cpp  bms_bq769x0_registers.h  bms_common.c  bms_common.cpp  bms_isl94202.c  bms_soc.c  bq769x0_hw.cpp  bq769x0_hw.h  bq769x0_interface.cpp  bq769x0_interface.h  bq769x0_registers.h  button.c  config.h  config_48v.h  config_5s.h  data_nodes.cpp  data_nodes.h  data_objects.cpp  data_objects.h  eeprom.cpp  eeprom.h  features.html  helper.c  helper.cpp  helper.h  isl94202_hw.c  isl94202_hw.h  isl94202_interface.c  isl94202_interface.h  isl94202_registers.h  leds.cpp  leds.h  main.cpp  main_mbed.cpp  main_zephyr.cpp  output.cpp  output.h  (+9 more)
src/api/: bms.html  bms_ic.html  data_objects.html  misc.html
src/bq769x0/: CMakeLists.txt  bms_bq769x0.c  interface.c  registers.h
src/bq769x2/: bms_bq769x2.c  interface.c  interface.h  registers.h
src/dev/: building_flashing.html  customization.html  simulator.html  unit_tests.html  workspace_setup.html
src/ext/: CMakeLists.txt  can.cpp  can_msg_queue.cpp  can_msg_queue.h  ext.cpp  ext.h  ext_vzlogger.cpp  oled.cpp  serial.cpp  template.cpp  wifi.cpp
src/isl94202/: bms_isl94202.c  interface.c  interface.h  registers.h
src/pcbs/: bms_15s80_sc.h  bms_5s50_sc.h  bms_8s50_ic.h  pcb_3-5s.h  pcb_6-15s.h
src/uext/: oled_zephyr.cpp  uext_doglcd.cpp  uext_oled.cpp  uext_template.cpp
test/: autoconf.h  bms_bq769x0_tests.cpp  bms_common_tests.cpp  bms_isl94202_tests.cpp  bq769x0_interface_stub.c  devicetree.h  devicetree_unfixed.h  helper_tests.cpp  isl94202_interface_stub.c  main.cpp  tests.h  zephyr.h
tests/: CMakeLists.txt  Kconfig  prj.conf
tests/bms/: CMakeLists.txt  testcase.yaml
tests/bms/boards/: native_posix.overlay
tests/bms/src/: state_machine.c
tests/bms_ic/bq769x2/: CMakeLists.txt  prj.conf  testcase.yaml
tests/bms_ic/bq769x2/boards/: native_sim.overlay
tests/bms_ic/bq769x2/src/: functions.c  interface.c
tests/bms_ic/common/: CMakeLists.txt  bms_setup.c  bms_setup.h
tests/bms_ic/isl94202/: CMakeLists.txt  testcase.yaml
tests/bms_ic/isl94202/boards/: native_posix.overlay  native_sim.overlay
tests/bms_ic/isl94202/src/: main.c
tests/boards/: bq769x0.overlay  bq769x2.overlay  isl94202.overlay  native_posix.conf  native_posix.overlay
tests/common/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/common/boards/: isl94202.overlay  native_posix.overlay
tests/common/src/: bq769x2_tests.h  bq769x2_tests_functions.c  bq769x2_tests_interface.c  common.c  common.h  common_tests.c  helper_tests.c  helper_tests.h  isl94202_tests.c  isl94202_tests.h  main.c
tests/helper/: CMakeLists.txt  prj.conf  testcase.yaml
tests/helper/src/: interpolation.c  is_empty.c
tests/src/: bms_bq769x0_tests.cpp  bms_common_tests.cpp  bms_isl94202_tests.cpp  bq769x0_interface_stub.c  bq769x0_tests.c  bq769x0_tests.cpp  bq769x0_tests.h  bq769x2_interface_stub.c  bq769x2_tests.cpp  bq769x2_tests.h  bq769x2_tests_functions.c  bq769x2_tests_functions.cpp  bq769x2_tests_interface.c  bq769x2_tests_interface.cpp  common_tests.cpp  common_tests.h  helper_tests.cpp  isl94202_interface_stub.c  isl94202_tests.c  isl94202_tests.cpp  main.c  main.cpp  tests.h
zephyr/: CMakeLists.txt  Kconfig  prj.conf  west.yml
zephyr/dts/bindings/: bms.yaml  inputs.yaml  renesas,isl94202.yaml  switch.yaml  ti,bq769x0.yaml  ti,bq769x2-common.yaml  ti,bq769x2-spi.yaml
(+136 files in other folders)
